Improvements (#4)
* fix confluence url

* fix cross repo consumer comment

* Remove redundant emoji

* schema contract comment format updated

* merged related category comments

* Fix breaking change comment

---------

Co-authored-by: Het <157559854+hsutar-ias@users.noreply.github.com>